[tool.poetry]
name = "onacol"
version = "0.3.3"
description = "Oh No! Another Configuration Library"
authors = ["Josef Nevrly"]
license = "MIT license"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
Cerberus = "^1.3.4"
"ruamel.yaml" = "^0.17.10"
cascadict = "^0.8.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^5.5"}
coveralls = "^3.2.0"
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
sphinxemoji = "^0.1.8"
twine = "^3.4.2"

[tool.poetry.urls]
homepage = "https://github.com/calcite/onacol"
documentation = "https://onacol.readthedocs.io/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source = ["onacol"]
relative_files = true

[tool.coverage.report]
fail_under = 100
